# zero2prod

./: .gitignore  Cargo.toml  README.md  configuration.example.yaml  docker-compose.yml
.github/workflows/: ci.yml
.husky/hooks/: pre-commit
migrations/: 20251201150730_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
