[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Aaditya Bhatnagar <11aadityab@gmail.com>"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11"
cargo-husky = "1.5.0"
husky-rs = "0.1.5"
serde = "1.0.228"
config = "0.11"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = "0.4.15"

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]

[package.metadata.husky]
# Run before committing
pre-commit = "cargo fmt --all && cargo clippy -- -D warnings"
